# functional_state_machine

./: CMakePresets.json
aTest/: CMakeLists.txt
theApp/: CMakeLists.txt  theApp.cpp
